# xre

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  install.sh
.github/workflows/: CICD.yml  integration.yml
src/: cli.rs  lib.rs  main.rs
tests/: integration.rs
